# mcp-services

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/skills/atlassian-mcp/: SKILL.md
.claude/skills/code-repos-mcp/: SKILL.md
.claude/skills/oracle-cloud-mcp/: SKILL.md
.github/workflows/: ci.yml  publish.yml
config/: repos.yaml
examples/: claude_desktop_config.json
src/examples/: README.md  __init__.py  chatbot.py  mcp_client.py
src/mcp_servers/: __init__.py
src/mcp_servers/atlassian/: README.md  __init__.py  confluence_client.py  jira_client.py  models.py  server.py  tools.py
src/mcp_servers/code_repos/: README.md  __init__.py  models.py  server.py  tools.py
src/mcp_servers/common/: __init__.py  base_server.py
src/mcp_servers/oracle_cloud/: README.md  __init__.py  auth.py  client.py  models.py  server.py  tools.py
tests/: conftest.py  test_atlassian.py  test_basic.py  test_code_repos.py  test_oracle_cloud.py
